syntax = "proto2";
package buffers.resources;

import "options.proto";

message Sprite {
  optional string name = 1;
  optional int32 id = 2 [(gmx) = "GMX_DEPRECATED"];

  optional bool preload = 4 [(gmx) = "GMX_DEPRECATED"];
  optional bool transparent = 5 [(gmx) = "GMX_DEPRECATED"];
  optional bool smooth_edges = 6 [(gmx) = "GMX_DEPRECATED"];

  optional int32 alpha_tolerance = 7 [(gmx) = "coltolerance"];
  optional bool separate_mask = 8 [(gmx) = "sepmasks"];
  optional int32 origin_x = 9 [(gmx) = "xorig"];
  optional int32 origin_y = 10 [(gmx) = "yorigin"];

  enum Shape { PRECISE = 0; RECTANGLE = 1; DISK = 2; DIAMOND = 3; }

  optional Shape shape = 11 [(gmx) = "colkind"];

  enum BoundingBox { AUTOMATIC = 0; FULL_IMAGE = 1; MANUAL = 2; }

  optional BoundingBox bbox_mode = 12 [(gmx) = "bboxmode"];

  optional int32 bbox_left = 13;
  optional int32 bbox_right = 14;
  optional int32 bbox_top = 15;
  optional int32 bbox_bottom = 16;

  optional int32 type = 17;
  optional int32 h_tile = 18 [(gmx) = "HTile"];
  optional int32 v_tile = 19 [(gmx) = "VTile"];
  optional int32 texture_group = 20 [(gmx) = "TextureGroups/TextureGroup0"];
  optional bool for3D = 21 [(gmx) = "For3D"];
  optional uint32 width = 22;
  optional uint32 height = 23;

  repeated string subimages = 3 [(gmx) = "frames/frame", (file_path) = true];
}
